--- a/aplicacion/templates/aplicacion/home.html
+++ b/aplicacion/templates/aplicacion/home.html
@@ -5,7 +5,14 @@
   <title>Inicio ProyectoFront</title>
 </head>
 <body>
-  <h1>¡Hola, Django funciona con templates!</h1>
+  <h1>ProyectoFront</h1>
+  <nav>
+    <a href="{% url 'aplicacion:home' %}">Inicio</a> |
+    <a href="{% url 'aplicacion:about' %}">Segunda página</a>
+  </nav>
+  <hr>
+
+  <h2>¡Hola, Django funciona con templates!</h2>
   <p>Esta es la página de inicio de tu app Pfront.</p>
 </body>
 </html>
